styles.css
/* ... */
.footer__socials {
  display: flex;
  align-items: center;
  margin-left: 16px;
}

.footer__social--link {
  display: flex;
  justify-content: center;
  background: #f7fafc;
  border-radius: 50%;
  padding: 8px;
  margin-left: 16px;
  z-index: 2;
  cursor: pointer;
  transition: all 300ms ease;
}

.footer__social--link svg {
  height: 16px;
  width: 16px;
}

/*Adding Responsiveness*/

@media (max-width: 1280px) {

  footer {
    max-width: 1160px;
    margin: auto 0;
  }
 
  .container {
    max-width: 1160px;
    padding: 96px 0px;
    margin: auto 0;
  }

  #landing .container,    
  #quality .container,
  #steps .container {
    max-width: 1100px;
  }

  .row {
    max-width: 1160px;
    justify-content: center;
    align-items: center;
  }

  .nav__row {
    max-width: 1160px;
    justify-content: space-between;
  }

  #quality .row {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .quality__description {
    width: 100%;
    max-width: 420px;
  }

  .quality__img--wrapper {
    width: auto;
    max-width: 640px;
    margin: 70px 16px;
  }

  .steps__grid {
    width: 6rem;
    height: 6rem;
    bottom: -60px;
    padding-right: 40px;
  }

  .steps__img--wrapper {
    width: 50%;
    padding-right: 40px;
    /*max-width: 340px;*/
    overflow: visible;
  }

  .steps__description {
    margin-right: 0;
  }

  /*.plan {
    max-width: 60%;
  }*/

  #values .row {
    margin: auto 0;
  }

  .values__img-wrapper {
    max-width: 50%;
    margin: auto 0;
  }

  .values__description {
    max-width: 50%;
    margin-right: 0;
  }

  .start__title {
    width: 100%;
    max-width: 560px;
  }

  .footer__bottom {
    margin: 0 32px;
  }
}

@media (max-width: 1024px) {
  footer {
    /*width: 100%;*/
    max-width: 1024px;
    margin: auto 0;
    padding: 80px 32px;
  }

  .container {
    width: 100%;
    max-width: 1024px;
    display: flex;
    margin: 0 auto;
    padding: 80px 32px;
    margin: 64px 0px;
  }

  #landing .container {
    margin-bottom: 0px;
  }

  #features .container {
    margin-bottom: 0;
  }

  /*#quality .container,
  #steps .container,
  #values .container,
  #pricing .container {
    margin-top: 80px;
    margin-bottom: 40px;
  }*/

  #start .container {
    padding-top: 5rem;
    padding-bottom: 5rem;
    margin-bottom: 80px;
  }

  /*#landing .container {
    margin-bottom: 100px;
  }*/

  .row {
    width: 100%;
    max-width: 1024px;
    margin: 0 auto;
  }

  .nav__row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .service__row {
    padding: 16px 8px;
    margin: 0 16px;
  }

  #features .row {
    width: 100%;
    max-width: 800px;
  }

  nav,
  #start .container,
  #quality .row,
  #values .row,
  #testimonials .row {
    width: 100%;
    max-width: 960px;
    margin: auto 0;
  }

  h1 {
    font-size: 30px;
  }

  /*#quality .row,
  #testimonials .row {
    padding-bottom: 64px;
  }

  #steps .row,
  #values .row {
    padding-bottom: 80px;
  }

  .nav__row,
  #quality .row,
  #steps .row,
  #values .row,
  #testimonials .row {
    margin: 0 48px;
  }*/

  .nav__links {
    display: none;
  }

  .btn__menu {
    display: block;
  }

  /*header h1 {
    margin-top: 80px;
  }*/

  .section__title {
    font-size: 36px;
  }

  #features .section__title {
    font-size: 48px;
  }

  .section__para {
    font-size: 16px;
  }

  .header__description {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .header__description,
  .header__img--wrapper {
    width: 100%;
    max-width: 512px;
    margin: 0 auto;
  }

  header .row,
  .header__email,
  footer .row {
    flex-direction: column;
  }

  /*.header__customers--title {
    margin-top: 40px;
  }*/

  .header__customers--img {
    /*margin-top: 16px;
    margin-bottom: 64px;*/
    padding-right: 0px;
    margin-bottom: 32px;
  }

  /*.header__img {
    margin-bottom: 32px;
  }*/

  .services {
    max-width: 768px;
  }

  .service {
    width: calc(100% / 2);
  }

  .quality__description {
    margin-right: 0px;
    padding-right: 48px;
  }

  /*.steps__description {
    margin: 0px 32px;
  }*/

  .steps__grid {
    bottom: -50px;
    left: 50%;
    width: 5rem;
    height: 5rem;
  }

  .steps__description {
    padding-left: 40px;
  }

  .list__plans {
    display: flex;
    flex-direction: column;
    align-items: center;
    /*max-width: 420px;*/
  }

  .plan {
    margin-right: 0px;
    margin-bottom: 32px;
  }

  /*.plan:last-child {
    margin-bottom: 80px;
  }*/

  .start__row {
    flex-direction: column;
  }

  .start__title {
    text-align: center;
    width: 100%;
    max-width: 512px;
  }

  .start__buttons {
    width: auto;
    margin-top: 16px;
    /*margin-top: 24px;*/
  }

  .start__button {
    padding: 16px 32px;
    height: auto;
  }

  /*footer {
    width: 100%;
    max-width: 1024px;
    padding: 80px 32px;
    margin: auto 0;
  }*/

  .footer__bottom {
    width: 100%;
    max-width: 1024px;
    justify-content: space-evenly;
    margin: auto;
  }
}
/* ... */

